<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Open Camera</string>
    <string name="action_settings">Settings</string>
    <string name="intro_text">Touch to focus, and press the blue camera button to take photos. For more help, click Online help from Settings. Open Camera is completely free. If you like this app, please consider buying my donate app :) (see link in Settings, or Online help).\n\nPrivacy Policy: Location permission is required for geotagging, but this is disabled by default. If enabled, your location is encoded in the saved files (and it is only used for this purpose).\n\n(This message won\'t show again.)</string>
    <string name="intro_ok">OK (This message won\'t show again)</string>

    <string name="preference_category_camera_effects">Camera Effects</string>
    <string name="preference_auto_stabilise">Auto-stabilise</string>
    <string name="preference_auto_stabilise_summary">Images will be rotated so they are automatically level (photos only) (slower to take photos, and may fail on devices with too low memory)</string>
    <string name="preference_color_effect">Apply a color effect</string>
    <string name="preference_color_effect_summary">Applies the selected color effect to the photo</string>
    <string name="preference_scene_mode">Apply a scene mode</string>
    <string name="preference_scene_mode_summary">Optimise the photo for different scenes</string>
    <string name="preference_white_balance">Set the white balance</string>
    <string name="preference_white_balance_summary">Choose a setting to adjust the white balance</string>
    <string name="preference_iso">Set the ISO</string>
    <string name="preference_iso_summary">A higher value means more sensitive to light (may not work on some devices)</string>
    <string name="preference_exposure">Set the exposure compensation</string>
    <string name="preference_exposure_summary">Set to 0 for the default exposure compensation.</string>
    <string name="preference_face_detection">Face detection</string>
    <string name="preference_face_detection_summary">Use face detection instead of focus areas.</string>

    <string name="preference_category_camera_controls">Camera Controls</string>
    <string name="preference_timer">Timer</string>
    <string name="preference_timer_summary">Set a timer for the camera</string>
    <string name="preference_timer_beep">Timer beep</string>
    <string name="preference_timer_beep_summary">Beep when timer is counting down or for burst mode delay</string>
    <string name="preference_burst_mode">Burst mode</string>
    <string name="preference_burst_mode_summary">Take multiple photos in succession</string>
    <string name="preference_burst_interval">Burst mode interval</string>
    <string name="preference_burst_interval_summary">Delay (if any) between taking photos in burst mode</string>
    <string name="preference_screen_camera_controls_more">More camera controls…</string>
    <string name="preference_pause_preview">Pause after taking photo</string>
    <string name="preference_pause_preview_summary">Pause the screen after taking a photo, with the option to share or delete the photo</string>
    <string name="preference_shutter_sound">Shutter sound</string>
    <string name="preference_shutter_sound_summary">Play a sound when taking a photo (requires Android 4.2 or greater to disable)</string>
    <string name="preference_volume_keys">Volume keys</string>
    <string name="preference_volume_keys_summary">Set behaviour for when volume keys are pressed</string>
    <string name="preference_screen_gui">On screen GUI…</string>
    <string name="preference_preview_size">Preview size</string>
    <string name="preference_preview_size_summary">How to choose the preview size</string>
    <string name="preference_ui_placement">UI placement</string>
    <string name="preference_ui_placement_summary">Whether to have a left-handed or right-handed user interface</string>
    <string name="preference_save_location">Save location</string>
    <string name="preference_save_location_summary">Name of folder to save the photo/video files in (can also be a full path)</string>
    <string name="preference_show_zoom">Show zoom</string>
    <string name="preference_show_zoom_summary">Display the current camera zoom level on screen (when zoomed in)</string>
    <string name="preference_show_zoom_controls">Show zoom -/+ controls</string>
    <string name="preference_show_zoom_controls_summary">Show the -/+ buttons for zoom control</string>
    <string name="preference_free_memory">Show free memory</string>
    <string name="preference_free_memory_summary">Display the remaining device storage space on screen</string>
    <string name="preference_show_angle">Show angle</string>
    <string name="preference_show_angle_summary">Display the current device orientation angle on screen</string>
    <string name="preference_show_angle_line">Show angle line</string>
    <string name="preference_show_angle_line_summary">Display horizontal level line</string>
    <string name="preference_show_geo_direction">Show compass direction</string>
    <string name="preference_show_geo_direction_summary">Display the compass direction of the device on screen</string>
    <string name="preference_grid">Show a grid</string>
    <string name="preference_grid_summary">Display one of various grids</string>
    <string name="preference_thumbnail_animation">Show thumbnail animation</string>
    <string name="preference_thumbnail_animation_summary">Display moving thumbnail animation when taking a photo</string>
    <string name="preference_max_brightness">Force maximum brightness</string>
    <string name="preference_max_brightness_summary">Force screen display to be at maximum brightness, rather than device default</string>

    <string name="preference_category_camera_quality">Photo and Video Settings</string>
    <string name="preference_screen_camera_quality">Photo and video settings…</string>
    <string name="preference_resolution">Camera resolution</string>
    <string name="preference_resolution_summary">Set the resolution of photos taken by the camera</string>
    <string name="preference_quality">Image quality</string>
    <string name="preference_quality_summary">Set the image quality of saved photo images (recommended value is 90%%)</string>
    <string name="preference_location">Store location data (Geotagging)</string>
    <string name="preference_location_summary">Store GPS location data in the photos</string>
    <string name="video_quality">Video resolution</string>
    <string name="video_quality_summary">Set the resolution of videos</string>
    <string name="preference_force_video_4k">Force 4K UHD video (experimental)</string>
    <string name="preference_force_video_4k_summary">Enable 3840x2160 resolution for video recording on back camera - this will only work if your device supports it, and may crash if not!</string>
    <string name="preference_video_bitrate">Video bitrate (approx)</string>
    <string name="preference_video_bitrate_summary">Set the approximate bitrate of videos (higher means better quality, but takes up more disk space; may cause video recording to fail if bitrate not supported)</string>
    <string name="preference_video_fps">Video frame rate (approx)</string>
    <string name="preference_video_fps_summary">Set the frame rate (FPS) of videos (may be approx, not guaranteed to be achieved, and may cause video recording to fail if frame rate not supported)</string>
    <string name="preference_record_audio">Record audio</string>
    <string name="preference_record_audio_summary">Record audio when recording video</string>
    <string name="preference_record_audio_src">Audio source</string>
    <string name="preference_record_audio_src_summary">Microphone to use for recording audio</string>

    <string name="preference_category_online">Misc</string>
    <string name="preference_online_help">Online help</string>
    <string name="preference_donate">Donate to support development</string>
    <string name="preference_donate_summary">If you like this app, please consider making a donation. You can do this by purchasing my "donation app" - click this option will open up the page for my donation app. Thanks!</string>
    <string name="preference_about">About</string>
    <string name="preference_about_summary">App and debug information</string>
    <string name="about_ok">OK</string>
    <string name="about_available">Available</string>
    <string name="about_not_available">Not available</string>
    <string name="about_copy_to_clipboard">Copy to clipboard</string>

    <string name="take_photo">Take Photo</string>
    <string name="gallery">Gallery</string>
    <string name="exposure">Exposure</string>
    <string name="exposure_lock">Exposure Lock</string>
    <string name="focus_mode">Focus Mode</string>
    <string name="flash_mode">Flash Mode</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="switch_video">Switch Video</string>
    <string name="trash">Delete Last Picture</string>
    <string name="share">Share Photo</string>
    <string name="mode_normal">NormalShutterMode</string>
    <string name="mode_stable">StableShutterMode</string>
    <string-array name="Models">
        <item >StableMode</item>
        <item >NormalMode</item>
    </string-array>

</resources>
