<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity" >

    <FrameLayout
        android:id="@+id/preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>

   <!--<Spinner
       android:id="@+id/modeSpinner"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:entries="@array/Models"
       android:prompt="@string/mode_normal"/>
	-->

	<ProgressBar
	    android:id="@+id/SensorBar"
	    android:layout_marginLeft="-220dp"
	    android:layout_width="500dp"
	    android:layout_height="10dp"
	    android:indeterminate="false"
		android:progressDrawable="@drawable/progressdesign"
	    style="?android:attr/progressBarStyleHorizontal" />
	<TextView
	    android:id="@+id/progressLabel"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textSize="15sp"
	    android:padding="2dp"
	    android:background="@drawable/acceleratorbox"
	    android:textColor="#FFFFFF"
	    android:text="ブレ度"
	    android:layout_marginLeft="23dp"/>

	<ImageButton
        android:id="@+id/modeButton"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:padding="10dp"
        android:layout_marginLeft="90dp"
        android:scaleType="fitCenter"
        android:contentDescription="Mode"
        android:src="@drawable/normal"/>

    <LinearLayout
        android:id="@+id/sensorValues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/acceleratorX"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="15sp"
            android:lines="2"
            android:layout_margin="2dp"
            android:textColor="#FFFFFF"
            android:background="@drawable/acceleratorbox"
            android:text="10"/>

        <TextView
            android:id="@+id/acceleratorY"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="15sp"
            android:lines="2"
            android:layout_margin="2dp"
            android:textColor="#FFFFFF"
            android:background="@drawable/acceleratorbox"/>

        <TextView
            android:id="@+id/acceleratorZ"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="15sp"
            android:lines="2"
            android:layout_margin="2dp"
            android:textColor="#FFFFFF"
            android:background="@drawable/acceleratorbox"
            android:text="1"/>


        <!--
        <TextView
            android:id="@+id/gyroX"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="15sp"
            android:lines="2"
            android:layout_margin="2dp"
            android:textColor="#FFFFFF"
            android:background="@drawable/acceleratorbox"/>

        <TextView
            android:id="@+id/gyroY"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="15sp"
            android:lines="2"
            android:layout_margin="2dp"
            android:textColor="#FFFFFF"
            android:background="@drawable/acceleratorbox" />

        <TextView
            android:id="@+id/gyroZ"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="15sp"
            android:lines="2"
            android:layout_margin="2dp"
            android:textColor="#FFFFFF"
            android:background="@drawable/acceleratorbox"/>
		-->

    </LinearLayout>

    <ImageButton
        android:id="@+id/take_photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/take_photo"
        android:src="@drawable/take_photo"
        android:onClick="clickedTakePhoto"
        android:layout_centerVertical="true"
        />

    <ZoomControls
        android:id="@+id/zoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.5"
        />

    <SeekBar
        android:id="@+id/zoom_seekbar"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />

    <ImageButton
        android:id="@+id/settings"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/action_settings"
        android:src="@drawable/settings"
        android:onClick="clickedSettings"
        />

    <ImageButton
        android:id="@+id/gallery"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/gallery"
        android:src="@drawable/gallery"
        android:onClick="clickedGallery"
        />

    <ImageButton
        android:id="@+id/exposure_lock"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/exposure_lock"
        android:onClick="clickedExposureLock"
        />

    <ImageButton
        android:id="@+id/exposure"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/exposure"
        android:src="@drawable/exposure"
        android:onClick="clickedExposure"
        />

    <ImageButton
        android:id="@+id/focus_mode"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/focus_mode"
        android:onClick="clickedFocusMode"
        />

    <ImageButton
        android:id="@+id/flash"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/flash_mode"
        android:onClick="clickedFlash"
        />

    <ImageButton
        android:id="@+id/switch_video"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/switch_video"
        android:src="@drawable/switch_video"
        android:onClick="clickedSwitchVideo"
        />

    <ImageButton
        android:id="@+id/switch_camera"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/switch_camera"
        android:src="@drawable/switch_camera"
        android:onClick="clickedSwitchCamera"
        />

    <!-- should be at left-most -->
    <ImageButton
        android:id="@+id/trash"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/trash"
        android:src="@drawable/trash"
        android:onClick="clickedTrash"
        android:visibility="gone"
        />

    <ImageButton
        android:id="@+id/share"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/share"
        android:src="@drawable/share"
        android:onClick="clickedShare"
        android:visibility="gone"
        />

    <SeekBar
        android:id="@+id/seekbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        />

    <ZoomControls
        android:id="@+id/seekbar_zoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        />

    <net.sourceforge.opencamera.ArrowCanvas
	    android:id="@+id/arrowCanvas"
	    android:layout_width="250dp"
	    android:layout_height="250dp"/>

</RelativeLayout>
